@@ -1,3 +1,8 @@
+2002-01-28  Richard Hestilow  <hestilow@ximian.com>
+
+	* main.c: Include gconf-client.h, add trailing NULLs to all
+	gconf_client calls (for GError).
+
 2002-01-27  Seth Nickell  <snickell@stanford.edu>
 
 	* gtk-theme-selector.desktop.in.in:
